--- a/pages/home.html
+++ b/pages/home.html
@@ -10,9 +10,9 @@
 
   <script class="gutter" type="application/json" data-pattern="header/header"></script>
 
-  <banner>
+  <div>
     <script type="application/json" data-pattern="banner/banner"></script>
-  </banner>
+  </div>
 
   <div class="grid island-2">
     <div class="unit xs-1 s-1 m-1-3 gutter pad-t-2 pad-b-2">
@@ -35,10 +35,10 @@
     </div>
     <div class="unit xs-1 s-1 m-1-3 gutter pad-t-2 pad-b-2">
       <script type="application/json" data-pattern="cards/icon-card">
-      {
-        "h2": "Cart",
-        "p": "Take a look at your cart here. We'd love for you to fill it up!"
-      }
+        {
+          "h2": "Cart",
+          "p": "Take a look at your cart here. We'd love for you to fill it up!"
+        }
       </script>
     </div>
   </div>
